force-app/main/default/objects/AFSC__FSFileScanLog__c/AFSC__FSFileScanLog__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: File scan events log</description>
    <label>File Scan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>