force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Action__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Action__c</fullName>
    <label>Action</label>
    <type>TextArea</type>
</CustomField>