force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Date_Time_Scanned__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Date_Time_Scanned__c</fullName>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>