force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Direction__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Scan Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>