force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Extension__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Extension__c</fullName>
    <label>File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>