force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Parent_Id__c</fullName>
    <label>File Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>