force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Prevalence__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Prevalence__c</fullName>
    <label>File Prevalence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>