force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Prevalence_Desc1__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Prevalence_Desc1__c</fullName>
    <formula>IF(ISBLANK(AFSC__File_Reputation_Rating__c),&apos;Unknown&apos;,
IF(AFSC__File_Prevalence__c = 0, &quot;Unknown&quot;,
IF(AFSC__File_Prevalence__c &lt; 10, &quot;Unique&quot;,
IF(AFSC__File_Prevalence__c &lt; 30, &quot;Very rare&quot;,
IF(AFSC__File_Prevalence__c &lt; 50, &quot;Rare&quot;,
IF(AFSC__File_Prevalence__c &lt; 80, &quot;Common&quot;,
IF(AFSC__File_Prevalence__c &lt; 100, &quot;Very common&quot;,
&quot;Universal&quot;
)
)
)
)
)
)
)</formula>
    <label>File Prevalence</label>
    <type>Text</type>
</CustomField>