force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Prevalence_Desc__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Prevalence_Desc__c</fullName>
    <label>File Prevalence Desc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>Rare</fullName>
            </value>
            <value>
                <fullName>Unique</fullName>
            </value>
            <value>
                <fullName>Universal</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Very common</fullName>
            </value>
            <value>
                <fullName>Very rare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>