force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Reputation_Desc1__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Reputation_Desc1__c</fullName>
    <formula>IF(AFSC__File_Reputation_Rating__c &lt; 0, &quot;Unknown&quot;,
IF(AFSC__File_Reputation_Rating__c &lt; 10, &quot;Clean&quot;,
IF(AFSC__File_Reputation_Rating__c &lt; 90, &quot;Suspicious&quot;,
IF(AFSC__File_Reputation_Rating__c &lt; 101, &quot;Malicious&quot;,
&quot;Unknown&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Reputation</label>
    <type>Text</type>
</CustomField>