force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Reputation_Desc__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Reputation_Desc__c</fullName>
    <label>File Reputation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Malicious</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
            <value>
                <fullName>Suspicious</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>