force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Size__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Size__c</fullName>
    <label>File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>