force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__File_Version__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Version__c</fullName>
    <label>File Version</label>
    <type>TextArea</type>
</CustomField>