force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Full_File_Name__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Full_File_Name__c</fullName>
    <label>Full File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>