force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Infection_Name2__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Infection_Name2__c</fullName>
    <label>Infection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>