force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Infection_Name__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Infection_Name__c</fullName>
    <label>Infection Name DEPRECATED</label>
    <type>TextArea</type>
</CustomField>