force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Ip_address__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Ip_address__c</fullName>
    <label>IP address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>