force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Period__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Period__c</fullName>
    <formula>IF(AFSC__Date_Time_Scanned__c &gt; NOW() - 7, &quot;This week&quot;,
IF(AFSC__Date_Time_Scanned__c &gt; NOW() - 30, &quot;This month&quot;,
&quot;From the very beginning&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>