force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Reason__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Reason__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>