force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Record_Id__c</fullName>
    <description>Reference either to ContentVersion or to Attachment.</description>
    <label>DEPRECATED Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>