force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Ref_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Ref_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>