force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Replacement_File_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Replacement_File_Id__c</fullName>
    <label>Replacement File Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>