force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Scan_Type__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Scan_Type__c</fullName>
    <label>Scan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>