force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Scanbox_Result__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Scanbox_Result__c</fullName>
    <label>Scanbox Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Whitelisted</fullName>
            </value>
            <value>
                <fullName>Infected</fullName>
            </value>
            <value>
                <fullName>Suspected</fullName>
            </value>
            <value>
                <fullName>Grayware</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>