force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__SHA__c.field-meta.xml
<CustomField>
    <fullName>AFSC__SHA__c</fullName>
    <externalId>true</externalId>
    <label>SHA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>