force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Source__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Source__c</fullName>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>