force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Status__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Status__c</fullName>
    <description>Help field to get status icon based on action and verdict values. Value of this field is the name of the icon in the package.</description>
    <formula>IF (OR(ISPICKVAL(AFSC__Verdict__c, &apos;Error&apos;), ISPICKVAL(AFSC__Verdict__c, &apos;Unknown&apos;)), &apos;unknown&apos;,
  IF (OR(AFSC__Action__c = &apos;Removed&apos;, AFSC__Action__c = &apos;Quarantined&apos;), &apos;warning&apos;, 
    IF (AND(AFSC__Action__c = &apos;Passed&apos;, ISPICKVAL(AFSC__Verdict__c, &apos;Safe&apos;)), &apos;ok&apos;,
      &apos;block&apos;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>