force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__User__c.field-meta.xml
<CustomField>
    <fullName>AFSC__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>