force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__User_Name__c.field-meta.xml
<CustomField>
    <fullName>AFSC__User_Name__c</fullName>
    <formula>AFSC__User__r.FirstName + &apos; &apos; + AFSC__User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>