force-app/main/default/objects/AFSC__FSFileScanLog__c/fields/AFSC__Verdict__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Verdict__c</fullName>
    <label>Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Unsafe</fullName>
            </value>
            <value>
                <fullName>Disallowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>