force-app/main/default/objects/AFSC__FSFileScanLog__c/listViews/AFSC__all.listView-meta.xml
<ListView>
    <fullName>AFSC__all</fullName>
    <columns>NAME</columns>
    <columns>AFSC__File_Name__c</columns>
    <columns>AFSC__Ref_Record_Id__c</columns>
    <columns>AFSC__Scan_Type__c</columns>
    <columns>AFSC__Verdict__c</columns>
    <columns>AFSC__User__c</columns>
    <columns>AFSC__Source__c</columns>
    <columns>AFSC__Date_Time_Scanned__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>